--- a/Author_/Author_Bio_Cell.xib
+++ b/Author_/Author_Bio_Cell.xib
@@ -34,7 +34,7 @@
                     <constraint firstAttribute="trailing" secondItem="qo4-fs-wRV" secondAttribute="trailing" constant="10" id="y84-YE-Cab"/>
                 </constraints>
             </collectionViewCellContentView>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <size key="customSize" width="264" height="40"/>
             <point key="canvasLocation" x="-94.20289855072464" y="47.544642857142854"/>
         </collectionViewCell>
