--- a/Author_/Author_Bio_Cell.xib
+++ b/Author_/Author_Bio_Cell.xib
@@ -27,6 +27,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <color key="backgroundColor" red="0.0" green="0.60784313729999995" blue="0.70588235290000001" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
                     <constraint firstItem="qo4-fs-wRV" firstAttribute="top" secondItem="UjP-zs-Xph" secondAttribute="top" id="HeB-9U-VGC"/>
                     <constraint firstAttribute="bottom" secondItem="qo4-fs-wRV" secondAttribute="bottom" id="MSN-Hw-fwV"/>
