--- a/Author_/Author_Bio_Cell.xib
+++ b/Author_/Author_Bio_Cell.xib
@@ -11,14 +11,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Author_Bio_Cell" id="5iQ-Lc-V9m">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="40"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="16"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="UjP-zs-Xph">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="40"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="16"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qo4-fs-wRV">
-                        <rect key="frame" x="10" y="0.0" width="300" height="40"/>
+                    <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="none" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qo4-fs-wRV">
+                        <rect key="frame" x="10" y="0.0" width="300" height="16"/>
                         <constraints>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" id="bMV-jL-fuQ"/>
                         </constraints>
@@ -27,7 +27,6 @@
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
-                <color key="backgroundColor" red="0.0" green="0.60784313729999995" blue="0.70588235290000001" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
                     <constraint firstItem="qo4-fs-wRV" firstAttribute="top" secondItem="UjP-zs-Xph" secondAttribute="top" id="HeB-9U-VGC"/>
                     <constraint firstAttribute="bottom" secondItem="qo4-fs-wRV" secondAttribute="bottom" id="MSN-Hw-fwV"/>
@@ -35,8 +34,8 @@
                     <constraint firstAttribute="trailing" secondItem="qo4-fs-wRV" secondAttribute="trailing" constant="10" id="y84-YE-Cab"/>
                 </constraints>
             </collectionViewCellContentView>
-            <size key="customSize" width="264" height="40"/>
-            <point key="canvasLocation" x="-94.20289855072464" y="47.544642857142854"/>
+            <size key="customSize" width="264" height="16"/>
+            <point key="canvasLocation" x="-94.20289855072464" y="38.839285714285715"/>
         </collectionViewCell>
     </objects>
 </document>
