--- a/Author_/Author_Bio_Cell.xib
+++ b/Author_/Author_Bio_Cell.xib
@@ -34,7 +34,7 @@
                     <constraint firstAttribute="trailing" secondItem="qo4-fs-wRV" secondAttribute="trailing" constant="10" id="y84-YE-Cab"/>
                 </constraints>
             </collectionViewCellContentView>
-            <color key="backgroundColor" red="1" green="0.83529411760000005" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <size key="customSize" width="264" height="16"/>
             <point key="canvasLocation" x="-94.20289855072464" y="38.839285714285715"/>
         </collectionViewCell>
